--- a/frontend/src/views/QuizCreator/statics/css/quizCreator.css
+++ b/frontend/src/views/QuizCreator/statics/css/quizCreator.css
@@ -1,166 +1,158 @@
 @import "../../../../utils/colors.css";
 
-.quizCreator_root{
+.quizCreator_root {
   flex-grow: 1;
-  height:100%;
-  width:100%;
+  height: 100%;
+  width: 100%;
 }
-.quizCreator_addQuestionButtonContainer{
-  scroll-snap-type:y mandatory;
+.quizCreator_addQuestionButtonContainer {
+  scroll-snap-type: y mandatory;
 }
-.quizCreator_groupBoxOuter{
+.quizCreator_groupBoxOuter {
   min-width: 35%;
 }
-.quizCreator_uploadOption{
-  position:relative;
-  top:7px;
+.quizCreator_uploadOption {
+  position: relative;
+  top: 7px;
 }
-.quizCreator_uploadOption :hover{
-  color:var(--purple2);
-  cursor:pointer;
+.quizCreator_uploadOption :hover {
+  color: var(--purple2);
+  cursor: pointer;
 }
 
-.quizCreator_header{
-  width:100%;
-  height:10%;
-  position:relative;
+.quizCreator_header {
+  width: 100%;
+  height: 10%;
+  position: relative;
 }
-.quizCreator_fileuploadText{
-  appearance:none
+.quizCreator_fileuploadText {
+  appearance: none;
 }
-.submission{
-  width:80%;
+.submission {
+  width: 80%;
 }
-.quizCreator_fileuploadText{
-  font-size:1rem;
+.quizCreator_fileuploadText {
+  font-size: 1rem;
   font-weight: 200;
 }
 
-.quizCreator_imageContainerOuter{
-    
+.quizCreator_imageContainerOuter {
 }
-.quizCreator_fileupload{
-  background:transparent;
-  border:none;
-  cursor:pointer;
+.quizCreator_fileupload {
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
-.quizCreator_imageContainer{
-    
+.quizCreator_imageContainer {
 }
 
-.quizCreator_removeContainer{
-    /* height:100%;
+.quizCreator_removeContainer {
+  /* height:100%;
     padding:0px;
     width:50%;
     margin:0px auto; */
 }
-.quizCreator_remove{
-  float:right;
+.quizCreator_remove {
+  float: right;
   /* width: 100px; */
   height: 25px;
-  background:transparent;
-  border:none;
+  background: transparent;
+  border: none;
   color: var(--white);
-  border:none;
+  border: none;
   font-size: 1.1em;
-  
-  
-  cursor:pointer;
+
+  cursor: pointer;
 }
-.quizCreator_imageCntainer{
-  position:relative;
-    
+.quizCreator_imageCntainer {
+  position: relative;
 }
-.quizCreator_titleText{
-  position:relative;
-  padding-left:50px;
-  top:5vh;
+.quizCreator_titleText {
+  position: relative;
+  padding-left: 50px;
+  top: 5vh;
   font-weight: bold;
   font-size: 2.5em;
 }
-.quizCreator_body{
-  width:100%;
-  height:90%;
+.quizCreator_body {
+  width: 100%;
+  height: 90%;
 }
-.quizCreator_outerContainer{
-  height:100%;
+.quizCreator_outerContainer {
+  height: 100%;
 }
-.quizCreator_innerContainer{
-  height:100%;
+.quizCreator_innerContainer {
+  height: 100%;
 }
-.quizCreator_titleFieldContainer{
+.quizCreator_titleFieldContainer {
   padding-top: 50px;
-  width:80%;
+  width: 80%;
 }
-.quizCreator_uploadedBox{
-  width:30vw;
-  padding:0px !important;
-  margin:0px !important;
+.quizCreator_uploadedBox {
+  width: 30vw;
+  padding: 0px !important;
+  margin: 0px !important;
 }
-.quizCreator_formBox{
-  padding:50px 0px !important;
-    
-
+.quizCreator_formBox {
+  padding: 50px 0px !important;
 }
-.quizCreator_questionNumber{
-  font-size:2rem;
-  position:relative;
-  font-weight:bold;
+.quizCreator_questionNumber {
+  font-size: 2rem;
+  position: relative;
+  font-weight: bold;
 }
-.quizCreator_final{
-  width:80%;
+.quizCreator_final {
+  width: 80%;
 }
-.quizCreator_dropdown{
-  width:80%;
+.quizCreator_dropdown {
+  width: 80%;
 }
 
-.quizCreator_closeButton{
+.quizCreator_closeButton {
   cursor: pointer;
 }
 
-.quizCreator_imageContainerOuter1{
+.quizCreator_imageContainerOuter1 {
   position: relative;
-  top:10px;
+  top: 10px;
 }
-.quizCreator_imageContainer{
-  height:80vh;
+.quizCreator_imageContainer {
+  height: 80vh;
 }
-.quizCreator_questionTitle{
+.quizCreator_questionTitle {
 }
-.quizCreator_questionTitleOuter{
+.quizCreator_questionTitleOuter {
 }
-.quizCreator_questionTitleContainer{
-  height: 70px !important;;
-    
+.quizCreator_questionTitleContainer {
+  height: 70px !important;
+  cursor: pointer;
 }
-.quizCreator_fileUploadedIcon{
-  padding:10px  !important;
-  position:relative;
-  top:3px;
+.quizCreator_fileUploadedIcon {
+  padding: 10px !important;
+  position: relative;
+  top: 3px;
 }
 
-
-.quizCreator_option{
-    
+.quizCreator_option {
 }
-.quizCreator_addOptions{
+.quizCreator_addOptions {
   width: 160px;
   height: 45px;
   background-color: var(--purple2);
   margin-top: 20px;
-  border:none;
+  border: none;
   color: var(--white);
   border-radius: 12px;
   font-size: 1.1em;
-  cursor:pointer;
+  cursor: pointer;
 }
-.quizCreator_correct{
-  
+.quizCreator_correct {
 }
 
-.lol{
-}
-.quizCreator_titleField,.quizCreator_descriptionField,.quizCreator_option,.quizCreator_questionTitle{
+.quizCreator_titleField,
+.quizCreator_descriptionField,
+.quizCreator_option,
+.quizCreator_questionTitle {
   outline: none;
   border: none;
   width: 100%;
@@ -169,148 +161,110 @@
   font-size: 1em;
   background: transparent;
 }
-.quizCreator_randomContainer{
-  padding:20px 0px 0px 0px;
-
+.quizCreator_randomContainer {
+  padding: 20px 0px 0px 0px;
 }
-.quizCreator_descriptionFieldContainer{
-  width:80%
-}
-
-.quizCreator_descriptionField{
-
+.quizCreator_descriptionFieldContainer {
+  width: 80%;
 }
 
-.quizCreator_randomText{
+.quizCreator_descriptionField {
+}
+
+.quizCreator_randomText {
   text-align: center;
   font-weight: 200;
   font-size: 1rem;
 }
-.quizCreator_uploadIcon{
+.quizCreator_questionContainer {
 }
-.quizCreator_uploadItems{
-    
-  padding:10px;
+.quizCreator_uploadIcon {
 }
-.quizCreator_uploadIconText{
-    
-  padding:10px;
+.quizCreator_uploadItems {
+  padding: 10px;
 }
-.quizCreator_upload:hover{
+.quizCreator_uploadIconText {
+  padding: 10px;
+}
+.quizCreator_upload:hover {
   /* position:relative;
   top:7px; */
-  color:var(--purple2);
-    
-
-
+  color: var(--purple2);
 }
-.quizCreator_uploadedFiles{
-    
-  margin:0px;
+.quizCreator_uploadedFiles {
+  margin: 0px;
   position: relative;
-  top:10px;
-
+  top: 10px;
 }
-.quizCreator_uploadItems{
-  
-  width:200px;
+.quizCreator_uploadItems {
+  width: 200px;
   text-overflow: ellipsis;
-  overflow:hidden;
-  
-
+  overflow: hidden;
 }
-.quizCreator_uploadFileListContainer{
-  width:250px;
-    
-
+.quizCreator_uploadFileListContainer {
+  width: 250px;
 }
 
-.quizCreator_uploadIconContainer{
-  cursor:pointer;
-  padding:0px !important;
-  margin:0px  !important;
-  
-
+.quizCreator_uploadIconContainer {
+  cursor: pointer;
+  padding: 0px !important;
+  margin: 0px !important;
 }
 
-.quizCreator_randomLabel{
-    
-
-    
+.quizCreator_randomLabel {
 }
-.quizCreator_questionRemovecontainer{
-    
-
-}
-.quizCreator_submitButtonContainer{
-    
-
+.quizCreator_submitButtonContainer {
 }
 
-
-.quizCreator_addQuestionButtonContainer{
-  padding: 10px 0px ;
-
-
-
-}
-.quizCreator_or,.quizCreator_fileUploadtext{
-  font-weight:300;
-  font-size:1.5rem;
-  text-align: center;
-  position: relative;
-  top:10px;
-  padding:20px;
-  
-
-
-}
-.quizCreator_fileUploadtext{
-  top:0px;
-  font-size:1rem;
-  padding:0px 10px 0px 0px;
-  
-
-
+.quizCreator_addQuestionButtonContainer {
+  padding: 10px 0px;
 }
 
-.quizCreator_fileUploadtext:hover{
+.quizCreator_fileUploadtext {
+  top: 0px;
+  font-size: 1rem;
+  padding: 0px 10px 0px 0px;
+}
+
+.quizCreator_fileUploadtext:hover {
   text-decoration: underline;
   text-decoration-color: var(--black);
-  cursor:pointer;
+  cursor: pointer;
 }
-.quizCreator_addQuestionButton{
+.quizCreator_addQuestionButton {
   width: 160px;
   height: 45px;
   background-color: var(--red4);
   color: var(--white);
   border-radius: 12px;
   font-size: 1.1em;
-  cursor:pointer;
+  cursor: pointer;
   scroll-snap-type: y mandatory;
-  border:none;
-  
-
+  border: none;
 }
 
-.quizCreator_submitButton{
-  position:relative;
+.quizCreator_submitButton {
+  position: relative;
   width: 160px;
   height: 45px;
   background-color: var(--black);
   color: var(--white);
   border-radius: 12px;
   font-size: 1.1em;
-  border:none;
-  cursor:pointer;
+  border: none;
+  cursor: pointer;
+}
+.quizCreator_questionTitleOuter {
 }
 
-.MuiPickersToolbar-toolbar,.MuiPickersClock-pin,.MuiPickersDay-daySelected,.MuiPickersClockPointer-thumb,.MuiPickersClockPointer-pointer{
-  background-color:var(--red4) !important;
-    
-
+.MuiPickersToolbar-toolbar,
+.MuiPickersClock-pin,
+.MuiPickersDay-daySelected,
+.MuiPickersClockPointer-thumb,
+.MuiPickersClockPointer-pointer {
+  background-color: var(--red4) !important;
 }
-.MuiPickersClockPointer-thumb{
-  border:14px solid var(--red4) !important;
+.MuiPickersClockPointer-thumb {
+  border: 14px solid var(--red4) !important;
 }
 /* <div class="MuiPickersClockPointer-thumb MuiPickersClockPointer-noPoint"></div> */
