MIniprofile aaile ko lagi temporary fix

--- a/frontend/src/components/DashboardLayout/statics/css/online.css
+++ b/frontend/src/components/DashboardLayout/statics/css/online.css
@@ -3,11 +3,10 @@
 .online_root{
   flex-grow:1;
   padding:0px 20px;
+  position: relative;
 }
-.online_root:hover{
-  flex-grow:1;
-  padding:0px 20px;
-  background:var(--grey3);
+.lol{
+  border:1px solid black;
 }
 .online_Image{
   border-radius: 50%;
@@ -16,17 +15,19 @@
   float: left;
 }
 .online_greenDot{
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   border-radius: 50%;
-  background: var(--green3);
+  background: var(--red1);
   position: absolute;
   top:30px;
   left:10px;
   margin-left: 20px !important;
+  box-shadow: 3px 3px 15px -3px rgba(0, 0, 0, 0.2);
+  
 }
 .online_ImageRoot{
-  position:relative;
+  position: relative;
 }
 .online_nameContainer{
   text-align: center;
@@ -36,4 +37,25 @@
   font-size: 1em;
   font-weight: 600;
   color:var(--grey1)
+}
+.online_miniProfile{
+  display: none;
+}
+.online_root:hover{
+  flex-grow:1;
+  padding:0px 20px;
+  background:var(--grey4);
+}
+
+.online_root:hover .online_miniProfile,.online_ImageRoot:hover + .online_miniProfile{
+  display:block;
+  position:absolute;
+  width:250px;
+  height:300px;
+  border-radius:25px;
+  top:-30px;
+  right:10px !important;
+  background-color: var(--white);
+  box-shadow: 3px 3px 15px -3px rgba(0, 0, 0, 0.2);
+  z-index:2;
 }
