--- a/frontend/src/components/DashboardLayout/statics/css/online.css
+++ b/frontend/src/components/DashboardLayout/statics/css/online.css
@@ -13,6 +13,8 @@
 	width: 35px;
 	height: 35px;
   float: left;
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+
 }
 .online_greenDot{
   width: 10px;
@@ -23,21 +25,27 @@
   top:25px;
   left:5px;
   margin-left: 20px !important;
-  box-shadow: 3px 3px 15px -3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+
 }
 .online_ImageRoot{
   position: relative;
 }
 .online_nameContainer{
-  text-align: center;
+  width:160px;
 }
+.online_nameContainer p{
+  overflow:hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .online_name{
   padding:0px 10px;
   font-size: 0.8em;
   font-weight: 600;
   color:var(--grey1);
   text-overflow: ellipsis;
-
 }
 .online_miniProfile{
   display:none;
@@ -45,16 +53,13 @@
 .online_root:hover{
   flex-grow:1;
   padding:0px 10px;
-
   background:var(--grey4);
   border-radius:15px;
 }
 
 .online_root:hover .online_miniProfile{
-  display:block;
+  display:inline;
   position:fixed;
-  width:180px;
-  height:250px;
   border-radius:25px;
   top:50vh;
   right:23vw !important;
@@ -80,9 +85,10 @@
     padding:0px 20px;
     font-size: 1em;
   }
+  .online_nameContainer{
+    width:250px;
+  }
   .online_root:hover .online_miniProfile{
-    width:220px;
-    height:300px;
     position: fixed;;
     top:50vh;
     right:10vw ;
