--- a/frontend/src/views/Admin/statics/css/commonView.css
+++ b/frontend/src/views/Admin/statics/css/commonView.css
@@ -8,8 +8,9 @@
     flex-grow: 1;
   }
   .adminCommon_topBarContainer {
-    width: 95%;
-    margin-top: 20px !important;
+    width: 100%;
+    background: var(--white);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
   }
   .adminCommon_topBar {
   }
@@ -29,13 +30,13 @@
     padding: 10px;
   }
   .adminCommon_text {
-    font-weight: bold;
+    text-indent: 20px !important;
     font-size: 2em;
-    cursor: text;
+    font-weight: bold;
   }
   .adminCommon_botBar {
     width: 95%;
-    margin-top: 0px !important;
+    margin-top: 30px !important;
   }
   .adminCommon_plusIcon {
     cursor: pointer;
