--- a/frontend/src/utils/colors.css
+++ b/frontend/src/utils/colors.css
@@ -24,11 +24,14 @@
   --blue3: #55b0ff;
   --blue4: #33bcd4;
   --blue5: #c5dcf7;
+  --blue6: #5b9fed;
+  --blue7: #3279d7;
   --green: #42c7ca;
   --green2: #00c2a5;
   --green3: #01d78d;
   --green4: #adf2db;
   --green5: #d1faec;
+  --green6: #3fe6c7;
   --yellow: #ffce37;
   --yellow2: #ffecb4;
   --yellow3: #fbf7ea;
