--- a/frontend/src/views/QuizCreator/statics/css/quizCreator.css
+++ b/frontend/src/views/QuizCreator/statics/css/quizCreator.css
@@ -9,7 +9,7 @@
   scroll-snap-type: y mandatory;
 }
 .quizCreator_groupBoxOuter {
-  min-width: 35%;
+  min-height:70px;
 }
 .quizCreator_uploadOption {
   position: relative;
@@ -18,6 +18,21 @@
 .quizCreator_uploadOption :hover {
   color: var(--purple2);
   cursor: pointer;
+  border: 1px solid black;
+}
+.quizCreator_groupButton{
+  position:relative;
+  padding:10px;
+  font-size:1.3rem;
+  font-weight:600;
+  border-radius:8px 8px 0px 0px;
+  cursor:pointer;
+
+}
+.quizCreator_groupButton:hover{
+  border-bottom: 2px solid var(--red4);
+  transform: scale(1.03);
+  transition: transform 250ms ease-in-out;
 }
 
 .quizCreator_header {
@@ -315,6 +330,80 @@
 }
 .quizCreator_questionTitleOuter {
 }
+  .quizCreator_popUpContainer {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+    background: rgba(15, 15, 15, 0.5);
+    border: 1px solid black;
+  }
+  .quizCreator_popUpBox {
+    width: 600px;
+    height: 550px;
+    position: relative;
+    border-radius: 15px;
+    background: var(--white);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    border:1px solid black;
+
+
+  }
+  .quizCreator_closeButtonContainer {
+    width: 20px;
+    border:1px solid black;
+    
+    height: 20px;
+  }
+  .quizCreator_popupTitle{
+    font-weight: bold;
+    border:1px solid black;
+
+    font-size:1.5rem;
+
+  }
+  .quizCreator_popupTitleContainer{
+    padding:0px !important;
+    margin:0px !important;
+    border:1px solid black;
+
+  }
+  .quizCreator_closeButton {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    position: relative;
+    border:1px solid black;
+
+    left:40px
+  }
+
+  .quizCreator_popUptopBar{
+    border:1px solid black;
+
+  }
+  .quizCreator_userlistContainerOuter{
+    height:inherit;
+    width:inherit;
+    border:1px solid black;
+
+  }
+  .quizCreator_userlistContainer{
+    height:400px;
+    border:1px solid black;
+    overflow:scroll;
+  }
+  .quizCreator_formBoxinner {
+    width: 85% !important;
+    height:400px;
+    margin: 0px auto;
+    border:1px solid black;
+  }
+  .quizCreator_groupCheckbox{
+
+  }
 
 .MuiPickersToolbar-toolbar,
 .MuiPickersClock-pin,
