--- a/frontend/src/components/DashboardLayout/statics/css/onlineBox.css
+++ b/frontend/src/components/DashboardLayout/statics/css/onlineBox.css
@@ -2,59 +2,49 @@
 
 @media only screen and (min-width: 1280px) {
   .onlineBox_root {
-    min-height: 63.5vh;
+    min-height: 300px;
+    max-height: 800px;
     border-radius: 25px;
     position: relative;
     margin: 0px auto;
     background: var(--secondary);
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
   }
-  .online_titleBar{
-    width:100%;
-    height:70px !important;
+  .online_titleBar {
+    width: 90%;
+    height: 50px !important;
+    margin: 20px auto !important;
   }
-  .onlineBox_userlistContainerOuter{
-    max-height:53vh;
-    overflow-Y:scroll;
-    padding:0px 10px 10px 10px;
+  .onlineBox_userlistContainerOuter {
+    width: 100%;
+    overflow-y: scroll;
   }
-    
-  .onlineBox_greenDot{
-   width: 20px;
+  .onlineBox_greenDot {
+    width: 20px;
     height: 20px;
     border-radius: 50%;
     background: var(--red4);
     position: relative;
-    top:30px;
-    margin-left: 20px !important;
   }
   .onlineBox_courseTextTitle {
     margin: 0px;
     font-size: 1.5em;
-    height: 2em;
     font-weight: bold;
     position: relative;
-    margin-top: 10px;
-    top: 12px;
-    left:-20px;
-    text-indent: 30px;
-    margin-bottom: 20px;
+    text-indent: 8px;
   }
-  .onlineBox_userlistContainer{
-    
-  }
-  .onlineBox_userList{
-    padding:3px 10px;
+  .onlineBox_userList {
+    padding: 3px 10px;
   }
 }
 @media only screen and (min-width: 1920px) {
   .onlineBox_root {
     max-height: 600px;
   }
-  .onlineBox_userList{
-    padding:5px 0px;
+  .onlineBox_userList {
+    padding: 5px 0px;
   }
-  .onlineBox_userlistContainerOuter{
-    padding:0px 20px 20px 20px;
+  .onlineBox_userlistContainerOuter {
+    padding: 0px 20px 20px 20px;
   }
 }
