--- a/frontend/src/views/QuizCreator/statics/css/quizCreator.css
+++ b/frontend/src/views/QuizCreator/statics/css/quizCreator.css
@@ -9,7 +9,7 @@
   scroll-snap-type: y mandatory;
 }
 .quizCreator_groupBoxOuter {
-  min-height:70px;
+  min-height: 70px;
 }
 .quizCreator_uploadOption {
   position: relative;
@@ -18,18 +18,16 @@
 .quizCreator_uploadOption :hover {
   color: var(--purple2);
   cursor: pointer;
-  border: 1px solid black;
 }
-.quizCreator_groupButton{
-  position:relative;
-  padding:10px;
-  font-size:1.3rem;
-  font-weight:600;
-  border-radius:8px 8px 0px 0px;
-  cursor:pointer;
-
+.quizCreator_groupButton {
+  position: relative;
+  padding: 10px;
+  font-size: 1.3rem;
+  font-weight: 600;
+  border-radius: 8px 8px 0px 0px;
+  cursor: pointer;
 }
-.quizCreator_groupButton:hover{
+.quizCreator_groupButton:hover {
   border-bottom: 2px solid var(--red4);
   transform: scale(1.03);
   transition: transform 250ms ease-in-out;
@@ -75,10 +73,9 @@
   font-size: 1.1em;
   cursor: pointer;
 }
-.quizCreator_remove:hover{
-  transform:scale(1.1);
-  transition:transform 350ms;
-
+.quizCreator_remove:hover {
+  transform: scale(1.1);
+  transition: transform 350ms;
 }
 .quizCreator_imageCntainer {
   position: relative;
@@ -142,18 +139,17 @@
 .quizCreator_questionTitleContainer {
   height: 70px !important;
   cursor: pointer;
-  border-radius:15px;
+  border-radius: 15px;
   position: relative;
 }
-.minimizeicon{
+.minimizeicon {
   position: absolute;
   border-radius: 50%;
-  left:-50px;
+  left: -50px;
 }
-.minimizeicon:hover{
-  background-color:var(--grey4);
+.minimizeicon:hover {
+  background-color: var(--grey4);
   transition: 350ms ease;
-
 }
 .quizCreator_fileUploadedIcon {
   padding: 10px !important;
@@ -174,11 +170,9 @@
   font-size: 1.1em;
   cursor: pointer;
 }
-.quizCreator_addOptions:hover{
-  transform:scale(1.05);
-  transition:350ms ease;
-
-
+.quizCreator_addOptions:hover {
+  transform: scale(1.05);
+  transition: 350ms ease;
 }
 .quizCreator_correct {
 }
@@ -201,35 +195,34 @@
 .quizCreator_descriptionFieldContainer {
   width: 80%;
 }
-.quizCreator_fileUploadContainer{
+.quizCreator_fileUploadContainer {
 }
-.quizCreator_please{
-  font-size:0.7rem;
+.quizCreator_please {
+  font-size: 0.7rem;
   font-weight: 100;
-  color:var(--grey2)
+  color: var(--grey2);
 }
-.quizCreator_optionContainer{
-  min-width:30em !important;
-  max-width:60em !important;
-  height:4.3em;
+.quizCreator_optionContainer {
+  min-width: 30em !important;
+  max-width: 60em !important;
+  height: 4.3em;
+}
+.quizCreator_filenameinner {
+  cursor: pointer;
+}
 
+.quizCreator_optionCheckbox {
 }
-.quizCreator_filenameinner{
-  cursor:pointer;
+.quizCreator_optiontextFIeld {
+  min-width: 30em !important;
+  padding: 0px 5px 0px 0px;
 }
-
-.quizCreator_optionCheckbox{
-}
-.quizCreator_optiontextFIeld{
-  min-width:30em !important;
-  padding:0px 5px 0px 0px;
-}
-.options_fileuploadedtext{
-  text-align:center;
-  max-width:16.5em;
-  font-size:1.1rem;
-  font-weight:100;
-  overflow:hidden;
+.options_fileuploadedtext {
+  text-align: center;
+  max-width: 16.5em;
+  font-size: 1.1rem;
+  font-weight: 100;
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
@@ -280,17 +273,16 @@
 .quizCreator_randomLabel {
 }
 .quizCreator_submitButtonContainer:hover {
-  transform:scale(1.05);
-  transition:350ms ease;
+  transform: scale(1.05);
+  transition: 350ms ease;
 }
 
 .quizCreator_addQuestionButtonContainer {
   padding: 10px 0px;
 }
 .quizCreator_addQuestionButtonContainer:hover {
-  transform:scale(1.05);
-  transition:350ms ease;
-
+  transform: scale(1.05);
+  transition: 350ms ease;
 }
 
 .quizCreator_fileUploadtext {
@@ -316,7 +308,6 @@
   border: none;
 }
 
-
 .quizCreator_submitButton {
   position: relative;
   width: 160px;
@@ -330,80 +321,64 @@
 }
 .quizCreator_questionTitleOuter {
 }
-  .quizCreator_popUpContainer {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    z-index: 2;
-    background: rgba(15, 15, 15, 0.5);
-    border: 1px solid black;
-  }
-  .quizCreator_popUpBox {
-    width: 600px;
-    height: 550px;
-    position: relative;
-    border-radius: 15px;
-    background: var(--white);
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-    border:1px solid black;
+.quizCreator_popUpContainer {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 2;
+  background: rgba(15, 15, 15, 0.5);
+  border: 1px solid black;
+}
+.quizCreator_popUpBox {
+  width: 600px;
+  height: 550px;
+  position: relative;
+  border-radius: 15px;
+  background: var(--white);
+  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+}
+.quizCreator_closeButtonContainer {
+  width: 20px;
 
+  height: 20px;
+}
+.quizCreator_popupTitle {
+  font-weight: bold;
 
-  }
-  .quizCreator_closeButtonContainer {
-    width: 20px;
-    border:1px solid black;
-    
-    height: 20px;
-  }
-  .quizCreator_popupTitle{
-    font-weight: bold;
-    border:1px solid black;
+  font-size: 1.5rem;
+}
+.quizCreator_popupTitleContainer {
+  padding: 0px !important;
+  margin: 0px !important;
+}
+.quizCreator_closeButton {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  position: relative;
 
-    font-size:1.5rem;
+  left: 40px;
+}
 
-  }
-  .quizCreator_popupTitleContainer{
-    padding:0px !important;
-    margin:0px !important;
-    border:1px solid black;
-
-  }
-  .quizCreator_closeButton {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-    position: relative;
-    border:1px solid black;
-
-    left:40px
-  }
-
-  .quizCreator_popUptopBar{
-    border:1px solid black;
-
-  }
-  .quizCreator_userlistContainerOuter{
-    height:inherit;
-    width:inherit;
-    border:1px solid black;
-
-  }
-  .quizCreator_userlistContainer{
-    height:400px;
-    border:1px solid black;
-    overflow:scroll;
-  }
-  .quizCreator_formBoxinner {
-    width: 85% !important;
-    height:400px;
-    margin: 0px auto;
-    border:1px solid black;
-  }
-  .quizCreator_groupCheckbox{
-
-  }
+.quizCreator_popUptopBar {
+}
+.quizCreator_userlistContainerOuter {
+  height: inherit;
+  width: inherit;
+}
+.quizCreator_userlistContainer {
+  height: 400px;
+  overflow: scroll;
+}
+.quizCreator_formBoxinner {
+  width: 85% !important;
+  height: 400px;
+  margin: 0px auto;
+}
+.quizCreator_groupCheckbox {
+}
 
 .MuiPickersToolbar-toolbar,
 .MuiPickersClock-pin,
