Quiz View in progress

--- a/frontend/src/utils/colors.css
+++ b/frontend/src/utils/colors.css
@@ -19,6 +19,8 @@
   --grey2: #a0a6ac;
   --grey3: #fff8f7;
   --grey4: #f2f2f2;
+  --grey5: #e0e0e0;
+  --grey6: #8d9ba6;
   --blue: #2b71db;
   --blue2: #389aea;
   --blue3: #55b0ff;
