--- a/frontend/src/utils/colors.css
+++ b/frontend/src/utils/colors.css
@@ -13,6 +13,7 @@
   --red41: #ff6f61;
   --red5: #ff9b91;
   --red6: #ffaaaa;
+  --red7: #ee4a4ae3;
   --black: #2c2e32;
   --white: #ffffff;
   --grey1: #676f79;
@@ -21,6 +22,7 @@
   --grey4: #f2f2f2;
   --grey5: #e0e0e0;
   --grey6: #8d9ba6;
+  --grey7: #fdfafa;
   --blue: #2b71db;
   --blue2: #389aea;
   --blue3: #55b0ff;
