--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,14 +28,14 @@ body {
 .MuiRadio-colorPrimary.Mui-checked {
   color: var(--red4) !important;
 }
-@media only screen and (min-width: 1366px) {
+/* @media only screen and (min-width: 1366px) {
   body {
     font-size: var(calc(--base-font-size * 1.3));
   }
-}
+} */
 
-@media only screen and (min-width: 1920px) {
+/* @media only screen and (min-width: 1920px) {
   body {
     font-size: var(calc(--base-font-size * 1.4));
   }
-}
+} */
