--- a/frontend/src/views/Profile/components/css/profileTabs.css
+++ b/frontend/src/views/Profile/components/css/profileTabs.css
@@ -1,30 +1,40 @@
 @import "../../../../utils/colors.css";
 
-.profileTab_tabs {
+@media only screen and (min-width: 1280px) {
+  .profileTabs_tabs {
+  }
+  .profileTabs_topPart {
+    margin: 4px 0 0 0 !important;
+    padding-top: 10px;
+  }
+  .profileTabs_imageContainer {
+  }
+  .profileTabs_image {
+    width: 90% !important;
+    height: auto !important;
+    position: relative;
+    border-radius: 50%;
+  }
+  .profileTabs_nameContainer {
+    padding-top: 10px;
+  }
+  .profileTabs_name {
+    margin: 0px;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-indent: 10px;
+  }
+  .profileTabs_departname {
+    margin: 0px;
+    font-size: 0.9em;
+    font-weight: 600;
+    color: var(--secondaryTextColor);
+    text-indent: 10px;
+  }
+  .profileTabs_tabIconContainer {
+    margin: 15px 0 0 0 !important;
+  }
 }
-.profileTabs_topPart {
-  margin: 4px 0 0 0 !important;
-  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
-}
-.profileTabs_imageContainer {
-}
-.profileTabs_image {
-  position: relative;
-  top: 5px;
-  border-radius: 50%;
-}
-.profileTabs_nameContainer {
-}
-.profileTabs_name {
-  font-size: 1.2em;
-  font-weight: bold;
-}
-.profileTabs_departname {
-  font-size: 0.9em;
-  font-weight: 600;
-  color: var(--secondaryTextColor);
-}
-.profileTabs_tabIconContainer {
-  height: 300px;
-  margin: 15px 0 0 0 !important;
+
+@media only screen and (min-width: 1920px) {
 }
