--- a/frontend/src/views/Profile/statics/css/profile.css
+++ b/frontend/src/views/Profile/statics/css/profile.css
@@ -1,43 +1,45 @@
 @import "../../../../utils/colors.css";
 
-.profile_root {
-  width: 100%;
-  height: 100%;
-  margin: 0px auto !important;
-  padding: 0px;
-  position: relative;
+@media only screen and (min-width: 1280px) {
+  .profile_root {
+    width: 100%;
+    margin: 0px auto !important;
+    padding: 0px;
+    position: relative;
+  }
+
+  .profile_topBar {
+    height: 80px;
+    background: var(--white);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  }
+  .profile_topBarInside {
+    height: 80px;
+  }
+  .profile_title {
+    margin: 0px;
+    font-size: 1.7em;
+    font-weight: bold;
+    text-indent: 40px;
+  }
+  .profile_mainContainer {
+    width: 90% !important;
+    margin: 20px auto !important;
+  }
+  .profile_tabsContainer {
+    height: 340px;
+    border-radius: 15px;
+    border: 1px solid var(--grey6);
+  }
+  .profile_profileBox {
+    height: 700px;
+    max-height: 700px;
+    max-height: 800px;
+    margin-left: 20px !important;
+    border-radius: 15px;
+    border: 1px solid var(--grey6);
+  }
 }
 
-.profile_mainContainer {
-  width: 100%;
-}
-.profile_topBar {
-  height: 70px;
-  background: var(--white);
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-}
-
-.profile_title {
-  margin: 0px auto;
-  font-size: 1.7em;
-  font-weight: bold;
-  text-indent: 40px;
-}
-.profile_Container {
-  margin-top: 30px !important;
-}
-.profile_tabsContainer {
-  height: 340px;
-  margin-left: 10px !important;
-  border-radius: 15px;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-}
-
-.profile_profileBox {
-  height: 700px;
-  max-height: 700px;
-  max-height: 800px;
-  margin-left: 30px !important;
-  border-radius: 15px;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+@media only screen and (min-width: 1920px) {
 }
