--- a/frontend/src/components/DashboardLayout/statics/css/courseBox.css
+++ b/frontend/src/components/DashboardLayout/statics/css/courseBox.css
@@ -7,7 +7,7 @@
     position: relative;
     margin: 0px auto;
     background: var(--secondary);
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    border: 1px solid var(--grey6);
   }
   .courseBox_courseTextTitle {
     margin: 0px;
