--- a/frontend/src/components/DashboardLayout/statics/css/onlineBox.css
+++ b/frontend/src/components/DashboardLayout/statics/css/onlineBox.css
@@ -8,7 +8,7 @@
     position: relative;
     margin: 0px auto;
     background: var(--secondary);
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    border: 1px solid var(--grey6);
   }
   .online_titleBar {
     width: 90%;
