--- a/frontend/src/components/DashboardLayout/statics/css/profileBox.css
+++ b/frontend/src/components/DashboardLayout/statics/css/profileBox.css
@@ -7,64 +7,56 @@
     height: 150px;
     border-radius: 25px;
     background: var(--secondary);
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.3);
+    position: relative;
+    border: 1px solid var(--grey6);
+  }
+  .profileBox_root:hover {
   }
   .profileBox_image {
+    object-fit: cover;
     border-radius: 50%;
   }
   .profileBox_imageSide {
-    position: relative;
   }
   .profileBox_textSide {
-    margin: 0px auto !important;
     height: 100%;
-    position: relative;
   }
   .profileBox_profileImage {
-    width: 75%;
+    width: 120px;
+    height: 120px;
     position: relative;
     margin: 0px auto;
   }
   .profileBox_textBoxTop {
     width: 100%;
-    height: 82px;
+    height: 100%;
   }
   .profileBox_textBox1 {
-    width: 72%;
     margin-top: 10px !important;
     position: relative;
   }
   .profileBox_textBox1 p {
-    width: 110px;
-    height: 70px;
+    width: 125px;
     margin: 0;
     word-wrap: break-word;
     overflow: hidden;
     text-overflow: ellipsis;
   }
   .profileBox_profileText {
+    padding: 10px;
     font-size: 0.88em;
     font-weight: 700;
     position: relative;
-    left: 2%;
-  }
-  .profileBox_textBox3 {
-    width: 95%;
-    position: absolute;
-    right: 0px;
-    bottom: 10px;
   }
   .profileBox_departmentText {
     margin: 0;
+    padding: 10px;
     font-weight: 380;
-    font-size: 0.8em;
+    font-size: 0.65em;
     color: var(--red4);
     position: relative;
   }
   .profileBox_buttonContainer {
-    position: absolute;
-    top: 10px;
-    right: 10px;
   }
   .profileBox_profileButtonIcon {
     width: 30px;
@@ -76,12 +68,8 @@
   .profileBox_root {
     height: 200px;
   }
-  .profileBox_textBoxTop {
-    height: 120px;
-  }
   .profileBox_textBox1 p {
     width: 160px;
-    height: 95px;
   }
   .profileBox_textBox1 {
     margin-top: 20px;
@@ -89,13 +77,9 @@
   .profileBox_profileText {
     font-size: 1.2em;
   }
-  .profileBox_textBox3 {
-    bottom: 20px;
-  }
   .profileBox_departmentText {
     font-size: 0.95em;
   }
   .profileBox_buttonContainer {
-    right: 20px;
   }
 }
