--- a/frontend/src/components/DashboardLayout/statics/css/sideBar.css
+++ b/frontend/src/components/DashboardLayout/statics/css/sideBar.css
@@ -3,6 +3,7 @@
 @media only screen and (min-width: 1280px) {
   .sideBar_root {
     flex-grow: 1 !important;
+    position: relative;
   }
   .sideBar_sideBar {
   }
@@ -10,7 +11,6 @@
     width: 85% !important;
     margin: 20px auto !important;
   }
-
   .sideBar_horizontalLine {
     width: 70px !important;
     height: 1.5px !important;
@@ -30,6 +30,14 @@
     width: 98% !important;
     margin: 15px auto;
     text-decoration: none !important;
+  }
+  .sideBar_logOutContainer {
+    width: 130px;
+    height: 45px;
+  }
+  .sideBar_logOutButton {
+    width: 100%;
+    height: 100%;
   }
 }
 
