--- a/frontend/src/utils/colors.css
+++ b/frontend/src/utils/colors.css
@@ -21,7 +21,7 @@
   --grey3: #fff8f7;
   --grey4: #f2f2f2;
   --grey5: #e0e0e0;
-  --grey6: #c2c9cf;
+  --grey6: #e0e0e0;
   --grey7: #fdfafa;
   --blue: #2b71db;
   --blue2: #389aea;
