--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,6 +28,16 @@ body {
 .MuiRadio-colorPrimary.Mui-checked {
   color: var(--red4) !important;
 }
+.MuiButton-root {
+  box-shadow: none !important;
+}
+.MuiButton-outlinedPrimary {
+  border: 1px solid var(--black) !important;
+  color: var(--black) !important;
+}
+.MuiButton-containedPrimary {
+  background-color: var(--red4) !important;
+}
 /* @media only screen and (min-width: 1366px) {
   body {
     font-size: var(calc(--base-font-size * 1.3));
