--- a/frontend/src/views/Landing/components/statics/css/smallCards.css
+++ b/frontend/src/views/Landing/components/statics/css/smallCards.css
@@ -6,7 +6,7 @@
     height: 180px;
     border-radius: 20px;
     background: var(--secondary);
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+    border: 1px solid var(--grey6);
   }
   .smallCards_root {
     flex-grow: 1;
