--- a/frontend/src/views/Notes/components/statics/css/sideNotes.css
+++ b/frontend/src/views/Notes/components/statics/css/sideNotes.css
@@ -8,9 +8,12 @@
     background: var(--white);
     margin: 0px auto;
     border-radius: 20px;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     color: var(--black);
+    border: 1px solid var(--grey6);
+  }
+  .sideNotes_root:hover {
+    border: 1px solid var(--blue6);
   }
   .sideNotes_innerContainer {
     width: 100%;
