--- a/frontend/src/views/Landing/statics/css/landing.css
+++ b/frontend/src/views/Landing/statics/css/landing.css
@@ -55,7 +55,7 @@
   }
   .landing_upCommingContainerBox {
     width: 50%;
-    padding: 2%;
+    padding: 2% 5% 0 5%;
     margin: 0px auto;
   }
   .landing_upcomingIcon {
